Fix bug where Devise fields had illegible text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ body {
   }
   
   form {
-    .form-control {
+    input, .form-control {
       color: #000000;
     }
 
